@@ -20,8 +20,11 @@ import java.util.Collections;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
+import java.util.Optional;
 import java.util.Set;
 import java.util.regex.Pattern;
+
+import org.keycloak.utils.StringUtil;
 
 /**
  * A typed wrapper around a {@link Map} based {@link Validator} configuration.
@@ -32,6 +35,10 @@ public class ValidatorConfig {
      * An empty {@link ValidatorConfig}.
      */
     public static final ValidatorConfig EMPTY = new ValidatorConfig(Collections.emptyMap());
+
+    public static boolean isEmpty(ValidatorConfig config) {
+        return EMPTY.equals(Optional.ofNullable(config).orElse(EMPTY));
+    }
 
     /**
      * Holds the backing map for the {@link Validator} config.
@@ -90,7 +97,7 @@ public class ValidatorConfig {
 
     public String getStringOrDefault(String key, String defaultValue) {
         Object value = config.get(key);
-        if (value instanceof String) {
+        if (value instanceof String && StringUtil.isNotBlank((String) value)) {
             return (String) value;
         }
         return defaultValue;
@@ -108,7 +115,7 @@ public class ValidatorConfig {
             return ((Number) value).intValue();
         } else if (value instanceof String) {
             try {
-                return new Integer((String) value);
+                return Integer.valueOf((String) value);
             } catch (NumberFormatException e) {
                 return null;
             }
@@ -128,7 +135,7 @@ public class ValidatorConfig {
             return ((Number) value).longValue();
         } else if (value instanceof String) {
             try {
-                return new Long((String) value);
+                return Long.valueOf((String) value);
             } catch (NumberFormatException e) {
                 return null;
             }
